--- a/Public/conctact.css
+++ b/Public/conctact.css
@@ -340,7 +340,7 @@ section {
     font-size: 16px;
     padding: 0;
     padding-left: 4px;
-    color: #1c3f3a;
+    color: #3E8076;
   }
 
   .title {
@@ -429,7 +429,7 @@ section {
     padding-top: 30px;
   }
   .navbar {
-    background-color: #1c3f3a;
+    background-color: #3E8076;
     width: 60%;
     position: fixed;
     top: 0;
@@ -463,7 +463,7 @@ section {
   }
   .signup,
   .login {
-    color: #1c3f3a !important;
+    color: #3E8076 !important;
     background: transparent !important;
     padding: 0 !important;
     text-align: left !important;
@@ -523,7 +523,7 @@ section {
    }
    .signup,
    .login {
-     color: #1c3f3a !important;
+     color: #3E8076 !important;
      background: transparent !important;
      padding: 0 !important;
      text-align: left !important;
