--- a/Public/signup.css
+++ b/Public/signup.css
@@ -34,7 +34,7 @@ main {
 }
 .img-container {
   height: fit-content;
-  background-color: #3e8076;
+  background-color: #3E8076 ;
   width: 427px;
   height: 732px;
   padding: 24px;
@@ -88,7 +88,7 @@ main {
   gap: 12px;
   border-radius: 25px;
   opacity: 0px;
-  background-color: #1c3f3a;
+  background-color: #3E8076;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
