--- a/Public/style.css
+++ b/Public/style.css
@@ -15,7 +15,7 @@ body {
 }
 header {
   width: 100%;
-  height: 56px;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -85,7 +85,7 @@ header nav {
 }
 
 .header-nav ul li a:hover {
-  color: #1c3f3a;
+  color: #3E8076;
 }
 
 /* Underline Effect */
@@ -96,7 +96,7 @@ header nav {
   left: 0;
   width: 0;
   height: 5px;
-  background-color: #1c3f3a;
+  background-color: #3E8076;
   transition: width 0.3s ease;
 }
 
@@ -118,14 +118,14 @@ a {
   font-style: normal;
   padding: 10px;
   background-color: transparent;
-  color: #1c3f3a;
+  color: #3E8076;
 }
 .signup {
   width: fit-content;
   padding: 10px;
   border-radius: 18px;
   opacity: 0px;
-  background-color: #1c3f3a;
+  background-color: #3E8076;
   font-family: "Inter", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -377,7 +377,7 @@ section.visible {
   gap: 24px;
   border-radius: 10px;
   opacity: 0px;
-  background: #1c3f3a;
+  background: #3E8076;
   text-align: center;
   transition: transform 1.2s ease-in, opacity 1.2s ease-in; /* Smooth transition */
 }
@@ -627,7 +627,7 @@ button {
 .ans5 {
   background-color: #ffffff;
   width: 460px;
-  border: 1px solid #1c3f3a;
+  border: 1px solid #3E8076;
   height: fit-content;
   padding: 10px;
   position: absolute;
@@ -677,7 +677,7 @@ button {
   opacity: 0px;
   display: flex;
   flex-direction: row;
-  background: #1c3f3a;
+  background: #3E8076;
   margin: auto;
   justify-content: space-between;
   align-items: center;
@@ -801,7 +801,7 @@ footer {
 }
 
 .footernav ul li a:hover {
-  color: #1c3f3a;
+  color: #3E8076;
 }
 
 /* Underline Effect */
@@ -930,7 +930,7 @@ footer {
     background-color: #fff;
   }
   .navbar {
-    background-color: #1c3f3a;
+    background-color: #3E8076;
     width: 30%;
     position: fixed;
     z-index: 9999999999999999999999999999999999999999999999999999999;
@@ -950,7 +950,7 @@ footer {
     height: 26px;
   }
   .navbar {
-    background-color: #1c3f3a;
+    background-color: #3E8076;
     width: 30%;
     position: fixed;
     z-index: 9999999999999999999999999999999999999999999999999999999;
@@ -985,7 +985,7 @@ footer {
 
   .signup,
   .login {
-    color: #1c3f3a;
+    color: #3E8076;
     background: transparent !important;
     padding: 0 !important;
     text-align: left !important;
@@ -1370,7 +1370,7 @@ footer {
     padding-top: 30px;
   }
   .navbar {
-    background-color: #1c3f3a;
+    background-color: #3E8076;
     width: 60%;
     position: fixed;
     top: 0;
@@ -1611,7 +1611,7 @@ footer {
   }
   .signup,
   .login {
-    color: #1c3f3a;
+    color: #3E8076;
     background: transparent !important;
     padding: 10px !important;
     text-align: left !important;
@@ -1677,7 +1677,7 @@ footer {
     padding-top: 30px;
   }
   .navbar {
-    background-color: #1c3f3a;
+    background-color: #3E8076;
     width: 60%;
     position: fixed;
     top: 0;
@@ -1971,7 +1971,7 @@ footer {
   }
   .signup,
   .login {
-    color: #1c3f3a;
+    color: #3E8076;
     background: transparent !important;
     padding: 0 !important;
     text-align: left !important;
@@ -2161,7 +2161,7 @@ footer {
   }
   .signup,
   .login {
-    color: #1c3f3a;
+    color: #3E8076;
     background: transparent !important;
     padding: 0 !important;
     text-align: left !important;
