--- a/Public/admin.css
+++ b/Public/admin.css
@@ -1254,7 +1254,7 @@ footer {
     gap: 6px;
   }
   .transaction-option {
-    width: fit-content;
+    width: 100%;
     padding: 0;
     padding: 10px;
     box-sizing: border-box;
