--- a/Public/dashboard.css
+++ b/Public/dashboard.css
@@ -707,7 +707,22 @@ table p {
   margin: auto;
   padding-bottom: 24px;
 }
-
+#profilePicture{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #3E8076;
+}
+.profileImage{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #3E8076;
+}
+.copyAccount{
+  background: none;
+  cursor: pointer;
+}
 #form-container {
   width: 100%;
   padding: 12px 48px;
@@ -1068,13 +1083,18 @@ table p {
 }
 .detail-box {
   width: 195px;
-  height: 20px;
+  height: fit-content;
+  margin: 0;
   padding: 10px;
   gap: 10px;
   border: 1px solid #00000080;
   opacity: 0px;
   align-items: center;
   display: flex;
+}
+.detail-box p{
+  margin: 0;
+  padding: 0;
 }
 .detail-box2 {
   height: fit-content;
@@ -1150,6 +1170,9 @@ table p {
 .mobile-box {
   display: flex;
   gap: 18px;
+}
+table td, tr{
+  font-family: inter;
 }
 @media screen and(max-width: 1200px) {
   body {
